--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instructions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='instructions.css') }}"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -17,9 +18,11 @@
             <li><strong></strong> Your will be presented with a subject, and a context in which the AI is aiming to explain</li>
             <li><strong></strong> These outputs will be generated uniquely for you</li>
             <li><strong>Your task:</strong> Rate the response based on correctness, relevance, appropriateness, and clarity.</li>
+            <li><strong></strong> Each output has a rank metric, which is where you rank each output according to what output you evaluate to be the highest quality. 1 is the highest quality and 3 is the lowest</li>
             <li><strong></strong> You can skip a response if you are unsure about the evaluation, but you have to interact with all the metrics in order to proceed to the next evaluation task</li>
             <li><strong></strong> Your evaluations will help to determine what kind of prompts are most benificial for learning.</li>
-            <li><strong></strong> Thank you very much for your time! Below are some specifications the evalation metrics ordinal scale</li>
+            <li><strong></strong> Once you have started the evaluation schema, you have to complete it in one setting, as you have to start over if a session is interrupted</li>
+            <li><strong></strong> Thank you for your participation. Below are the specifications of the evalation metrics ordinal scale</li>
         </ul>
     </div>
     <div class="container mt-5">
