--- a/static/instructions.css
+++ b/static/instructions.css
@@ -17,18 +17,24 @@ h2 {
 }
 
 p {
-    font-size: 18px;
-    color: #6c757d;
-    margin-bottom: 15px;
+    font-size: 24px; 
+    line-height: 1.6; 
+    color: #c12020;
+    background-color: #f8f8f8; 
+    padding: 15px; 
+    border-radius: 5px; /* Rounded corners */
+    border: 1px solid #ced4da; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    margin-bottom: 15px; 
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
+    list-style-type:none;
+    padding: 20px;
 }
 
 li {
-    background: #e9ecef;
+    background: #fbfdfe;
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
