--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instructions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='instructions.css') }}"> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='instructions.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
