--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -13,11 +13,14 @@
         <h2>Dear evaluator, welcome to the prompt evaluation schema</h2>
         <p>Please read the following instructions carefully before you begin your session</p>
         <ul>
-            <li ><strong>Information</strong></li>
+            <li ><strong>Introduction</strong></li>
             <li><strong></strong> This is an evaluation of the outputs from a Large Language Model (LLM) based on some specific prompts</li>
             <li><strong></strong> You will only be presented with the outputs from the prompts, not the prompt itself</li>
             <li><strong></strong> Your will be presented with a subject, and a context in which the AI is aiming to explain</li>
             <li><strong></strong> These outputs will be generated uniquely for you</li>
+            <li><strong></strong> Once you've started the evaluation process, you need to finnish it in one session, as it's not possible to start over from where you left of</li>
+            <li><strong></strong> There are only 12 evaluation tasks, so take you time with each task.</li>
+            <li><strong></strong> The evaluation process will take approximately 30-45 minutes</li>
             <li><strong>Your Task</strong></li>
             <li><strong></strong> Rate the response based on correctness, relevance, appropriateness, and clarity.</li>
             <li><strong></strong> You will be presented with 4 outputs from the AI for each evaluation task</li>
@@ -26,7 +29,7 @@
             <li><strong></strong> You can skip a response if you are unsure about the evaluation, but you have to interact with all the metrics in order to proceed to the next evaluation task</li>
             <li><strong></strong> Your evaluations will help to determine what kind of prompts are most benificial for learning.</li>
             <li><strong></strong> Below are the definitions of the evalation metrics ordinal scale. Please read them carefully.</li>
-            <li><strong></strong> During the evaluation you can always access the definitions of the evaluation metrics by pressing the 'info' button at the bottom of the screen</li>
+            <li><strong>Notice: </strong> During the evaluation you can always access the definitions of the evaluation metrics by pressing the 'info' button at the bottom of the screen</li>
             <li><strong></strong> Thank you for participating in this experiment</li>
         </ul>
     </div>
