--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -25,10 +25,10 @@
             <li><strong></strong> Rate the response based on correctness, relevance, appropriateness, and clarity.</li>
             <li><strong></strong> You will be presented with 4 outputs from the AI for each evaluation task</li>
             <li><strong></strong> If you encounter that an evalation task presents the text "No response available, rate everything to 1 and rank lowest, then continue</li>
-            <li><strong></strong> Rank the outputs from 1-4, where 1 is the output you rate the highest</li>
             <li><strong></strong> You can skip a response if you are unsure about the evaluation, but you have to interact with all the metrics in order to proceed to the next evaluation task</li>
             <li><strong></strong> Your evaluations will help to determine what kind of prompts are most benificial for learning.</li>
             <li><strong></strong> Below are the definitions of the evalation metrics ordinal scale. Please read them carefully.</li>
+            <li><strong></strong> After you have evaluated each metric according to the definitions below, give each output a rank from 1-4, where 1 is the output you rated highest overall</li>
             <li><strong>Notice: </strong> During the evaluation you can always access the definitions of the evaluation metrics by pressing the 'info' button at the bottom of the screen</li>
             <li><strong></strong> Thank you for participating in this experiment</li>
         </ul>
