--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -30,6 +30,9 @@
             <li><strong></strong> Below are the definitions of the evalation metrics ordinal scale. Please read them carefully.</li>
             <li><strong></strong> After you have evaluated each metric according to the definitions below, give each output a rank from 1-4, where 1 is the output you rated highest overall</li>
             <li><strong>Notice: </strong> During the evaluation you can always access the definitions of the evaluation metrics by pressing the 'info' button at the bottom of the screen</li>
+            <li><strong>Notice: </strong> Don't forget to look at the setting, subject and topic for each evaluation task</li>
+            <li><strong></strong> If you have any questions, please ask the experimenter Jákup Pæturssonur Dam</li>
+            <li><strong></strong> If you are ready to start the evaluation, press the 'Start Evaluation' button below</li>
             <li><strong></strong> Thank you for participating in this experiment</li>
         </ul>
     </div>
